--- a/src/css/header.scss
+++ b/src/css/header.scss
@@ -255,6 +255,11 @@
 	align-items: center;
 	text-transform: uppercase;
 	margin-bottom: 10px;
+	transition: 0.3s ease;
+	cursor: pointer;
+}
+.order__link:hover {
+	box-shadow: 0px 0px 20px 7px rgba(237, 0, 3, 0.4);
 }
 
 .time {
@@ -290,6 +295,10 @@
 }
 
 .header__btn.active {
+	box-shadow: 10px 10px 40px #ED0003;
+}
+
+.header__btn:hover {
 	box-shadow: 10px 10px 40px #ED0003;
 }
 
