--- a/src/css/modal.scss
+++ b/src/css/modal.scss
@@ -10,6 +10,7 @@
 	background-color: #F7F7FF;
 	box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.25);
 	border-radius: 6px;
+	z-index: 10000;
 }
 
 .modal form {
@@ -17,9 +18,10 @@
 	visibility: hidden;
 	width: 100%;
 	height: 100%;
-	flex-direction: column;
-	justify-content: space-between;
-	align-items: flex-start;
+	// display: flex;
+	// flex-direction: column;
+	// justify-content: space-between;
+	// align-items: flex-start;
 	transition: 0.3s ease;
 }
 
@@ -71,6 +73,7 @@
 	justify-content: space-between;
 	align-items: center;
 	// margin-left: 30px;
+	cursor: pointer;
 }
 
 .file div {
@@ -129,6 +132,8 @@
 	font-size: 18px;
 	line-height: 21px;
 	color: #222222;
+	position: relative;
+	z-index: 10000;
 }
 
 .modal__raiting {
@@ -182,6 +187,7 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	cursor: pointer;
 }
 
 .send__window {
