--- a/src/css/first-section.scss
+++ b/src/css/first-section.scss
@@ -93,7 +93,7 @@ main {
 	left: 50px;
 	padding: 10px 20px;
 	display: flex;
-	justify-content: flex-start;
+	justify-content: space-between;
 	flex-direction: column;
 	align-items: center;
 	// transition: all 1s ease;
@@ -114,6 +114,9 @@ main {
 	text-align: center;
 	letter-spacing: 3px;
 	color: $white;
+	width: 100%;
+	height: auto;
+	word-wrap: wrap;
 }
 
 .advantage__text {
@@ -129,6 +132,9 @@ main {
 	justify-content: center;
 	align-items: center;
 	transform: skew(25deg);
+	width: 100%;
+	word-wrap: wrap;
+	height: auto;
 }
 
 .rotation__btn {
@@ -182,6 +188,7 @@ main {
 	opacity: 0;
 	visibility: hidden;
 	transition: .5s ease;
+	pointer-events: none;
 }
 
 .rotation__boot.active {
@@ -226,6 +233,7 @@ main {
 	position: absolute;
 	bottom: 230px;
 	left: 100px;
+	pointer-events: none;
 }
 
 .galary__wrapper {
@@ -256,6 +264,7 @@ main {
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
+	pointer-events: auto;
 }
 
 .other__foto {
@@ -275,6 +284,7 @@ main {
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
+	pointer-events: auto;
 }
 
 .galary__btns-group {
