--- a/src/css/footer.scss
+++ b/src/css/footer.scss
@@ -23,6 +23,7 @@ footer {
 	bottom: 0;
 	left: 50%;
 	transform: translateX(-50%);
+	pointer-events: none;
 }
 
 .footer__boot1 {
@@ -32,6 +33,7 @@ footer {
 	transform: translateX(-50%) rotate(60deg);
 	margin-left: -500px;
 	top: -190px;
+	pointer-events: none;
 
 }
 
@@ -42,6 +44,7 @@ footer {
 	transform: translateX(-50%);
 	margin-left: -400px;
 	top: 100px;
+	pointer-events: none;
 
 }
 
@@ -153,7 +156,7 @@ footer {
 	// display: none;
 	left: 0;
 	width: 72px;
-	background-color: $black;
+	background-color: $white;
 }
 
 .footer-dev {
